--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,20 +11,21 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  http: ^1.0.0
-  intl: any
-  json_annotation: ^4.8.0
-  webview_flutter: '4.2.2'
+  http:
+  intl:
+  json_annotation:
+  webview_flutter:
+  injectable:
+  get_it:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  build_runner: ^2.3.3
-  json_serializable: ^6.6.0
+  flutter_lints:
+  build_runner:
+  json_serializable:
+  injectable_generator:
 
 flutter:
   uses-material-design: true
   generate: true
-flutter_intl:
-  enabled: true
